fix : title - card section gap 추가

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -1,6 +1,10 @@
 // Starter Blog Template
 // https://hugoblox.com/hugo-themes/
 
+.section-heading {
+  margin-bottom: 3rem;  
+}
+
 .content-card-2 {
   background-color: #ffffff;
   border-radius: 8px;
